--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,2 @@
 WDS_SOCKET_PORT=443
-REACT_APP_BACKEND_URL=https://mystery-boxloja.onrender.com
-REACT_APP_GOOGLE_CLIENT_ID=231244828407-jqacf8ombm44aeh5scn544nvokvbkqis.apps.googleusercontent.com
+REACT_APP_BACKEND_URL=https://281e9918-4561-4e98-82fa-be70fc7d18fa.preview.emergentagent.com
